kubernetes/apps/network/exposure/grafana.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: network
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.${SECRET_DOMAIN_0}`)
      kind: Rule
      middlewares:
        - name: oauth2-proxy-auth
          namespace: network
      services:
        - name: kube-prometheus-stack-grafana
          namespace: monitoring
          port: 80
  tls:
    secretName: domain-0-prod-tls
